# Camels

./: .clang-format  .gitignore  .player.cpp.kate-swp  .traveler.h.kate-swp  1025ad.db  CMakeLists.txt  README  README.md  ai.cpp  ai.h  ai.hpp  business.cpp  business.h  business.hpp  constants.h  constants.hpp  draw.cpp  draw.h  draw.hpp  enum_array.hpp  focusable.h  focusable.hpp  formula.py  game.cpp  game.h  game.hpp  good.cpp  good.h  good.hpp  iconize.scm  inventory.cpp  inventory.hpp  loadbar.cpp  loadbar.h  loadbar.hpp  main.cpp  material.cpp  material.h  material.hpp  menubutton.cpp  (+40 more)
vs-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
vs-build/.cmake/api/v1/reply/: cache-v2-31d62e25e36184db776c.json  cmakeFiles-v1-4210b1b1972e7053a7e0.json  codemodel-v2-526272aa4366cf88df0b.json  index-2019-07-27T17-52-58-0142.json  target-ALL_BUILD-Debug-d04ecca416ebb9aacbcf.json  target-ZERO_CHECK-Debug-c18f72bc19a529ff66a5.json  target-camels-Debug-b39159c6def1a90300b5.json
vs-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
