cmake_minimum_required(VERSION 3.7)
project(Camels)
set(SRCS main.cpp game.cpp player.cpp nation.cpp town.cpp business.cpp traveler.cpp ai.cpp good.cpp material.cpp settings.cpp textbox.cpp scrollbox.cpp menubutton.cpp selectbutton.cpp loadbar.cpp printer.cpp draw.cpp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
# add -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC for bounds-checking
if (CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_CXX "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Wconversion -Og -g")
endif (CMAKE_COMPILER_IS_GNUCXX)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(Boost REQUIRED COMPONENTS system filesystem)
find_package(SQLite3 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
add_executable(camels ${SRCS})
target_link_libraries(camels sqlite3 ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${Boost_LIBRARIES})
