cmake_minimum_required(VERSION 3.7)
project(Camels)
set(SRCS main.cpp settings.cpp game.cpp player.cpp nation.cpp town.cpp business.cpp traveler.cpp ai.cpp property.cpp good.cpp pager.cpp textbox.cpp scrollbox.cpp menubutton.cpp selectbutton.cpp loadbar.cpp printer.cpp draw.cpp)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
# add -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC for bounds-checking
if (CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_CXX "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Wconversion -Og -g -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC")
endif (CMAKE_COMPILER_IS_GNUCXX)
set(CMAKE_BUILD_TYPE Debug)
add_executable(camels ${SRCS})
include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
pkg_search_module(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
pkg_search_module(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
find_package(Boost REQUIRED COMPONENTS system filesystem)
find_package(SQLite3 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
target_link_libraries(camels sqlite3 ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${Boost_LIBRARIES})
